# Pocahontas

./: .gitignore  AGENTS.md  LICENSE  PROMPT.md  README.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
e2e/: README.md  ai-features.spec.ts  albums.spec.ts  catalog.spec.ts  details-panel.spec.ts  face-detection.spec.ts  filmstrip.spec.ts  fixtures.ts  gallery.spec.ts  image-management.spec.ts  import.spec.ts  landing.spec.ts  module-tabs.spec.ts  panel-toggle.spec.ts  people.spec.ts  search.spec.ts  sidebar.spec.ts  tags.spec.ts  toolbar.spec.ts
e2e/tauri/: image-upscale.spec.ts  native-integration.spec.ts
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  sqlx-data.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/catalog/: manager.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs  schema.sql
src-tauri/src/exif/: parser.rs
src-tauri/src/face/: detector.rs  mod.rs
src-tauri/src/image/: pipeline.rs
src-tauri/src/python/: bridge.rs
src/components/: DetailsPanel.tsx  GalleryGrid.tsx  MetadataPanel.tsx  Sidebar.tsx  Thumbnail.tsx  Toolbar.tsx
src/data/: mock.ts
src/hooks/: useCatalog.ts
src/services/: catalog.ts
src/styles/: globals.css
src/types/: index.ts
