[package]
name = "praetorian"
version = "0.1.0"
description = "A high-performance, local-first photo library application"
authors = ["RedRoma"]
edition = "2021"
license = "BSL-1.1"

[lib]
name = "praetorian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri v2 ---
tauri = { version = "2" }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }

# --- Database: sqlx with SQLite ---
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }

# --- Image processing ---
vips = "0.1.0-alpha.5"
image = "0.25"

# --- EXIF / metadata parsing ---
exif = { package = "kamadak-exif", version = "0.6" }

# --- ONNX Runtime (GPU-accelerated face detection) ---
# CUDA support enabled via the "cuda" feature.
# "load-dynamic" loads CUDA libraries at runtime rather than link time.
ort = { version = "2.0.0-rc.12", features = ["cuda", "load-dynamic"] }
ort-sys = "2.0.0-rc.12"

# --- UUID for hashed cache keys ---
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

# --- Filesystem / path utilities ---
walkdir = "2"
notify = "7"

# --- Error handling ---
thiserror = "2"
anyhow = "1"

# --- Logging ---
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Time ---
chrono = { version = "0.4", features = ["serde"] }

# --- Python bridge ---
duct = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
